tests/purs/failing/ModuleNameApostropheStart.purs
-- @shouldFailWith ErrorParsingModule
module 'ModuleNameStartsWithPrime where

import Effect.Console (log)

main = log "Done"
